--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               <div class="footer">
                 <div class="tags">
                   <div class="tag">HTML</div>
-                  <div class="tag">CSS</div>
+                  <div class="tag">Bootstrap</div>
                   <div class="tag">Javascript</div>
                 </div>
                 <div class="pjbtns">
@@ -182,7 +182,7 @@
                       href="https://luxurywindowwashing.com/"
                       target="_blank"
                       class="live-site"
-                      >Live Site</a
+                      >Website</a
                     >
                   </div>
                 </div>
@@ -225,7 +225,7 @@
                       href="https://ryanjohnsondev.github.io/MovieApp/"
                       target="_blank"
                       class="live-site"
-                      >Live Site</a
+                      >Website</a
                     >
                   </div>
                 </div>
@@ -269,7 +269,7 @@
                       href="https://ryanjohnsondev.github.io/DiceGame/"
                       target="_blank"
                       class="live-site"
-                      >Live Site</a
+                      >Website</a
                     >
                   </div>
                 </div>
@@ -313,7 +313,7 @@
                       href="https://ryanjohnsondev.github.io/GuessTheNumber/"
                       target="_blank"
                       class="live-site"
-                      >Live Site</a
+                      >Website</a
                     >
                   </div>
                 </div>
