--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </li>
             <li>
               <div class="btn">
-                <a href="#" class="resumeNav">Resume</a>
+                <a href="Portfolio.pdf" class="resumeNav" download>Resume</a>
               </div>
             </li>
           </ul>
@@ -135,8 +135,13 @@
           <div class="extLine extending-lineR"></div>
           <div class="about-container">
             <div class="image-container">
-              <img id="bio-img" src="images/self1.jpg" alt="Myself" />
-              <!-- <div class="img-box"></div> -->
+              <div class="carousel" id="carousel">
+                <img src="images/self1.jpg" alt="Myself" />
+                <img src="images/self2.jpg" alt="Myself" />
+                <img src="images/self3.jpg" alt="Myself" />
+                <img src="images/self4.jpg" alt="Myself" />
+                <img src="images/self5.jpg" alt="Myself" />
+              </div>
               <div class="img-rightScroll">&gt;</div>
               <div class="img-leftScroll">&lt;</div>
             </div>
@@ -150,12 +155,13 @@
                   <br />
                   I am a Front-End Web Developer working with multiple
                   technologies including
-                  <span class="html">HTML</span>, <span class="css">CSS</span>,
-                  <span class="javascript">Javascript</span>,
-                  <span class="react">React</span>,
-                  <span class="github">Github</span>,
-                  <span class="bootstrap">Bootstrap</span>, and
-                  <span class="photoshop">Photoshop</span>, and always
+                  <span class="html colortext">HTML</span>,
+                  <span class="css colortext">CSS</span>,
+                  <span class="javascript colortext">Javascript</span>,
+                  <span class="react colortext">React</span>,
+                  <span class="github colortext">Github</span>,
+                  <span class="bootstrap colortext">Bootstrap</span>, and
+                  <span class="photoshop colortext">Photoshop</span>, and always
                   continuing to learn more! I have an eye for design and color
                   theory, and I will not rest until the project looks perfect.
                   <br />
@@ -278,6 +284,53 @@
             </div>
             <div class="project project3">
               <div class="project-img-container">
+                <h3>Improvement Batches for "osu!"</h3>
+                <div class="description">
+                  <p>
+                    This app was created with React, and I created this website
+                    to help players of the game "osu!" improve with these
+                    specific levels that I call "Batches". The app uses the
+                    Chimu API in order to get the title, difficulty level, and
+                    download links.
+                  </p>
+                </div>
+                <a
+                  href="https://improvementbatches.netlify.app/"
+                  target="_blank"
+                >
+                  <img
+                    src="images/batches.jpg"
+                    alt="Improvement Batches for osu!"
+                /></a>
+              </div>
+              <div class="footer">
+                <div class="tags">
+                  <div class="tag">React</div>
+                  <div class="tag">Javscript</div>
+                  <div class="tag">CSS</div>
+                </div>
+                <div class="pjbtns">
+                  <div class="btn">
+                    <a
+                      href="https://github.com/RyanJohnsonDEV/improvementBatches"
+                      target="_blank"
+                      class="see-code"
+                      >Code</a
+                    >
+                  </div>
+                  <div class="btn">
+                    <a
+                      href="https://improvementbatches.netlify.app/"
+                      target="_blank"
+                      class="live-site"
+                      >Website</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="project project4">
+              <div class="project-img-container">
                 <h3>Dice Game</h3>
                 <div class="description">
                   <p>
@@ -312,50 +365,6 @@
                   <div class="btn">
                     <a
                       href="https://ryanjohnsondev.github.io/DiceGame/"
-                      target="_blank"
-                      class="live-site"
-                      >Website</a
-                    >
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="project project4">
-              <div class="project-img-container">
-                <h3>Guess The Number!</h3>
-                <div class="description">
-                  <p>
-                    A game built in Javascript where you guess a number between
-                    two values. If your score decreases to zero, you lose! The
-                    game includes a difficulty selection system, in which the
-                    numbers you are guessing between greatly increases.
-                  </p>
-                </div>
-                <a
-                  href="https://ryanjohnsondev.github.io/GuessTheNumber/"
-                  target="_blank"
-                >
-                  <img src="images/number.jpg" alt="Guess the Number"
-                /></a>
-              </div>
-              <div class="footer">
-                <div class="tags">
-                  <div class="tag">HTML</div>
-                  <div class="tag">CSS</div>
-                  <div class="tag">Javascript</div>
-                </div>
-                <div class="pjbtns">
-                  <div class="btn">
-                    <a
-                      href="https://github.com/RyanJohnsonDEV/GuessTheNumber"
-                      target="_blank"
-                      class="see-code"
-                      >Code</a
-                    >
-                  </div>
-                  <div class="btn">
-                    <a
-                      href="https://ryanjohnsondev.github.io/GuessTheNumber/"
                       target="_blank"
                       class="live-site"
                       >Website</a
